# usbip-gui

./: .gitignore  README.md  gui.py  main.py  meson.build
po/: POTFILES  en.po  meson.build  ru.po  usbip-gui.pot
share/: usbip-gui  usbip-gui.desktop
usbip-gui/: __main__.py  gui.py  main.py
